--- a/themes/LoveIt/config.toml
+++ b/themes/LoveIt/config.toml
@@ -5,155 +5,111 @@
 
 [params]
   # site default theme ["auto", "light", "dark"]
-  # 网站默认主题 ["auto", "light", "dark"]
   defaultTheme = "auto"
   # public git repo url only then enableGitInfo is true
-  # 公共 git 仓库路径，仅在 enableGitInfo 设为 true 时有效
-  gitRepo = ""
+  enableGitInfo = true
+  gitRepo = "https://github.com/lazydeveloper/lazydeveloper.github.io"
   # which hash function used for SRI, when empty, no SRI is used
-  # ["sha256", "sha384", "sha512", "md5"]
-  # 哪种哈希函数用来 SRI, 为空时表示不使用 SRI
   # ["sha256", "sha384", "sha512", "md5"]
   fingerprint = ""
   # date format
-  # 日期格式
   dateFormat = "2006-01-02"
   # website title for Open Graph and Twitter Cards
-  # 网站标题, 用于 Open Graph 和 Twitter Cards
-  title = "My cool site"
+  title = "Shiva's Blog"
   # website description for RSS, SEO, Open Graph and Twitter Cards
-  # 网站描述, 用于 RSS, SEO, Open Graph 和 Twitter Cards
-  description = "This is my cool site"
+  description = "Tech blog by Shiva Inampudi"
   # website images for Open Graph and Twitter Cards
-  # 网站图片, 用于 Open Graph 和 Twitter Cards
   images = []
 
   # Header config
-  # 页面头部导航栏配置
   [params.header]
     # desktop header mode ["fixed", "normal", "auto"]
-    # 桌面端导航栏模式 ["fixed", "normal", "auto"]
     desktopMode = "fixed"
     # mobile header mode ["fixed", "normal", "auto"]
-    # 移动端导航栏模式 ["fixed", "normal", "auto"]
+
     mobileMode = "auto"
     # Header title config
-    # 页面头部导航栏标题配置
     [params.header.title]
       # URL of the LOGO
       # LOGO 的 URL
       logo = ""
       # title name
-      # 标题名称
-      name = "My cool site"
+      name = "Shiva's Blog"
       # you can add extra information before the name (HTML format is supported), such as icons
-      # 你可以在名称 (允许 HTML 格式) 之前添加其他信息, 例如图标
       pre = ""
       # you can add extra information after the name (HTML format is supported), such as icons
-      # 你可以在名称 (允许 HTML 格式) 之后添加其他信息, 例如图标
       post = ""
       # whether to use typeit animation for title name
-      # 是否为标题显示打字机动画
       typeit = false
 
   # Footer config
-  # 页面底部信息配置
   [params.footer]
     enable = true
     # Custom content (HTML format is supported)
-    # 自定义内容 (支持 HTML 格式)
     custom = ""
     # whether to show Hugo and theme info
-    # 是否显示 Hugo 和主题信息
     hugo = true
     # whether to show copyright info
-    # 是否显示版权信息
     copyright = true
     # whether to show the author
-    # 是否显示作者
     author = true
     # site creation time
-    # 网站创立年份
-    since = 2022
+    since = 2020
     # ICP info only in China (HTML format is supported)
-    # ICP 备案信息，仅在中国使用 (支持 HTML 格式)
     icp = ""
     # license info (HTML format is supported)
-    # 许可协议信息 (支持 HTML 格式)
     license= ""
 
   # Section (all posts) page config
-  # Section (所有文章) 页面配置
   [params.section]
     # special amount of posts in each section page
-    # section 页面每页显示文章数量
     paginate = 20
     # date format (month and day)
-    # 日期格式 (月和日)
     dateFormat = "01-02"
     # amount of RSS pages
-    # RSS 文章数目
     rss = 10
 
   # List (category or tag) page config
-  # List (目录或标签) 页面配置
   [params.list]
     # special amount of posts in each list page
-    # list 页面每页显示文章数量
     paginate = 20
     # date format (month and day)
-    # 日期格式 (月和日)
     dateFormat = "01-02"
     # amount of RSS pages
-    # RSS 文章数目
     rss = 10
 
   # App icon config
-  # 应用图标配置
   [params.app]
     # optional site title override for the app when added to an iOS home screen or Android launcher
-    # 当添加到 iOS 主屏幕或者 Android 启动器时的标题, 覆盖默认标题
-    title = "My cool site"
+    title = "Shiva's Blog"
     # whether to omit favicon resource links
-    # 是否隐藏网站图标资源链接
     noFavicon = false
     # modern SVG favicon to use in place of older style .png and .ico files
-    # 更现代的 SVG 网站图标, 可替代旧的 .png 和 .ico 文件
     svgFavicon = ""
     # Android browser theme color
-    # Android 浏览器主题色
     themeColor = "#ffffff"
     # Safari mask icon color
-    # Safari 图标颜色
     iconColor = "#5bbad5"
     # Windows v8-11 tile color
-    # Windows v8-11 磁贴颜色
     tileColor = "#da532c"
 
   # Search config
   # 搜索配置
   [params.search]
-    enable = false
+    enable = true
     # type of search engine ["lunr", "algolia"]
-    # 搜索引擎的类型 ["lunr", "algolia"]
     type = "lunr"
     # max index length of the chunked content
-    # 文章内容最长索引长度
     contentLength = 4000
     # placeholder of the search bar
-    # 搜索框的占位提示语
     placeholder = ""
     # max number of results length
-    # 最大结果数目
     maxResultLength = 10
     # snippet length of the result
-    # 结果内容片段长度
     snippetLength = 30
     # HTML tag name of the highlight part in results
-    # 搜索结果中高亮部分的 HTML 标签
     highlightTag = "em"
     # whether to use the absolute URL based on the baseURL in search index
-    # 是否在搜索索引中使用基于 baseURL 的绝对路径
     absoluteURL = false
     [params.search.algolia]
       index = ""
@@ -161,54 +117,41 @@
       searchKey = ""
 
   # Home page config
-  # 主页信息设置
   [params.home]
     # amount of RSS pages
-    # RSS 文章数目
     rss = 10
     # Home page profile
-    # 主页个人信息
     [params.home.profile]
       enable = true
       # Gravatar Email for preferred avatar in home page
-      # Gravatar 邮箱，用于优先在主页显示的头像
-      gravatarEmail = ""
+      gravatarEmail = "inampude@gmail.com"
       # URL of avatar shown in home page
-      # 主页显示头像的 URL
       avatarURL = ""
       # title shown in home page (HTML format is supported)
-      # 主页显示的网站标题 (支持 HTML 格式)
       title = ""
       # subtitle shown in home page
-      # 主页显示的网站副标题
-      subtitle = "This is my cool site"
+      subtitle = "I'm Shiva, welcome to my tech blog"
       # whether to use typeit animation for subtitle
-      # 是否为副标题显示打字机动画
       typeit = true
       # whether to show social links
-      # 是否显示社交账号
       social = true
       # disclaimer (HTML format is supported)
-      # 免责声明 (支持 HTML 格式)
       disclaimer = ""
     # Home page posts
-    # 主页文章列表
     [params.home.posts]
       enable = true
       # special amount of posts in each home posts page
-      # 主页每页显示文章数量
       paginate = 6
   # Social config in home page
-  # 主页的社交信息设置
   [params.social]
-    GitHub = ""
+    GitHub = "lazydeveloper"
     Linkedin = ""
     Twitter = ""
     Instagram = ""
     Facebook = ""
-    Telegram = ""
+    Telegram = "ckpro"
     Medium = ""
-    Gitlab = ""
+    Gitlab = "ckpro"
     Youtubelegacy = ""
     Youtubecustom = ""
     Youtubechannel = ""
@@ -258,7 +201,7 @@
     Researchgate = ""
     Mastodon = ""
     Thingiverse = ""
-    Devto = ""
+    Devto = "lazydeveloper"
     Gitea = ""
     XMPP = ""
     Matrix = ""
@@ -267,55 +210,38 @@
     RSS = ""
 
   # Page global config
-  # 文章页面全局配置
   [params.page]
     # whether to hide a page from home page
-    # 是否在主页隐藏一篇文章
     hiddenFromHomePage = false
     # whether to hide a page from search results
-    # 是否在搜索结果中隐藏一篇文章
     hiddenFromSearch = false
     # whether to enable twemoji
-    # 是否使用 twemoji
-    twemoji = false
+    twemoji = true
     # whether to enable lightgallery
-    # 是否使用 lightgallery
     lightgallery = false
     # whether to enable the ruby extended syntax
-    # 是否使用 ruby 扩展语法
     ruby = true
     # whether to enable the fraction extended syntax
-    # 是否使用 fraction 扩展语法
     fraction = true
     # whether to enable the fontawesome extended syntax
-    # 是否使用 fontawesome 扩展语法
     fontawesome = true
     # whether to show link to Raw Markdown content of the content
-    # 是否显示原始 Markdown 文档内容的链接
     linkToMarkdown = true
     # whether to show the full text content in RSS
-    # 是否在 RSS 中显示全文内容
     rssFullText = false
     # Table of the contents config
-    # 目录配置
     [params.page.toc]
       # whether to enable the table of the contents
-      # 是否使用目录
       enable = true
       # whether to keep the static table of the contents in front of the post
-      # 是否保持使用文章前面的静态目录
       keepStatic = false
       # whether to make the table of the contents in the sidebar automatically collapsed
-      # 是否使侧边目录自动折叠展开
       auto = true
     # Code config
-    # 代码配置
     [params.page.code]
       # whether to show the copy button of the code block
-      # 是否显示代码块的复制按钮
       copy = true
       # the maximum number of lines of displayed code by default
-      # 默认展开显示的代码行数
       maxShownLines = 50
     # KaTeX mathematical formulas config (KaTeX https://katex.org/)
     # KaTeX 数学公式配置 (KaTeX https://katex.org/)
