--- a/config.toml
+++ b/config.toml
@@ -7,7 +7,7 @@ theme = "LoveIt"
 # themesDir = "../.."
 
 # website title
-title = "LoveIt"
+title = "Shiva's Blog"
 
 # determines default content language ["en", "zh-cn", "fr", "pl", ...]
 # 设置默认的语言 ["en", "zh-cn", "fr", "pl", ...]
