--- a/themes/LoveIt/config.toml
+++ b/themes/LoveIt/config.toml
@@ -178,7 +178,7 @@
       avatarURL = ""
       # title shown in home page (HTML format is supported)
       # 主页显示的网站标题 (支持 HTML 格式)
-      title = ""
+      title = "Shiva's Blog"
       # subtitle shown in home page (HTML format is supported)
       # 主页显示的网站副标题 (允许 HTML 格式)
       subtitle = "This is Shiva and welcome to my tech blog!"
