--- a/themes/LoveIt/config.toml
+++ b/themes/LoveIt/config.toml
@@ -50,10 +50,10 @@
   dateFormat = "2006-01-02"
   # website title for Open Graph and Twitter Cards
   # 网站标题, 用于 Open Graph 和 Twitter Cards
-  title = "My cool site"
+  title = "A tech blog by, Shiva Inampudi"
   # website description for RSS, SEO, Open Graph and Twitter Cards
   # 网站描述, 用于 RSS, SEO, Open Graph 和 Twitter Cards
-  description = "This is my cool site"
+  description = "shivas.blog: a tech blog by, Shiva Inampudi."
   # website images for Open Graph and Twitter Cards
   # 网站图片, 用于 Open Graph 和 Twitter Cards
   images = []
@@ -144,7 +144,7 @@
   [params.app]
     # optional site title override for the app when added to an iOS home screen or Android launcher
     # 当添加到 iOS 主屏幕或者 Android 启动器时的标题, 覆盖默认标题
-    title = "My cool site"
+    title = "A tech blog by, Shiva Inampudi"
     # whether to omit favicon resource links
     # 是否隐藏网站图标资源链接
     noFavicon = false
