--- a/themes/LoveIt/config.toml
+++ b/themes/LoveIt/config.toml
@@ -75,8 +75,8 @@
       logo = ""
       # title name
       # 标题名称
-      # shiva_
-      name = "Shiva's Blog"
+      # shiva.dev
+      name = "Shiva"
       # you can add extra information before the name (HTML format is supported), such as icons
       # 你可以在名称 (允许 HTML 格式) 之前添加其他信息, 例如图标
       pre = ""
@@ -237,9 +237,9 @@
     Twitter = ""
     Instagram = "/"
     Facebook = ""
-    Telegram = "ckpro"
+    Telegram = ""
     Medium = ""
-    Gitlab = "ckpro"
+    Gitlab = ""
     Youtubelegacy = ""
     Youtubecustom = ""
     Youtubechannel = ""
