--- a/themes/LoveIt/config.toml
+++ b/themes/LoveIt/config.toml
@@ -53,7 +53,7 @@
   title = "A tech blog by, Shiva Inampudi"
   # website description for RSS, SEO, Open Graph and Twitter Cards
   # 网站描述, 用于 RSS, SEO, Open Graph 和 Twitter Cards
-  description = "shivas.blog: a tech blog by, Shiva Inampudi."
+  description = "shiva.dev: a tech blog by, Shiva Inampudi."
   # website images for Open Graph and Twitter Cards
   # 网站图片, 用于 Open Graph 和 Twitter Cards
   images = []
@@ -76,7 +76,7 @@
       # title name
       # 标题名称
       # shiva.dev
-      name = "Shiva"
+      name = "> SHIVA"
       # you can add extra information before the name (HTML format is supported), such as icons
       # 你可以在名称 (允许 HTML 格式) 之前添加其他信息, 例如图标
       pre = ""
@@ -85,7 +85,7 @@
       post = ""
       # whether to use typeit animation for title name
       # 是否为标题显示打字机动画
-      typeit = false
+      typeit = true
 
   # Footer config
   # 页面底部信息配置
@@ -212,7 +212,7 @@
       title = ""
       # subtitle shown in home page (HTML format is supported)
       # 主页显示的网站副标题 (允许 HTML 格式)
-      subtitle = "This is Shiva and welcome to my tech blog!"
+      subtitle = "<code> git push origin www.shiva.dev</code>"
       # whether to use typeit animation for subtitle
       # 是否为副标题显示打字机动画
       typeit = true
