--- a/themes/LoveIt/config.toml
+++ b/themes/LoveIt/config.toml
@@ -50,10 +50,10 @@
   dateFormat = "2006-01-02"
   # website title for Open Graph and Twitter Cards
   # 网站标题, 用于 Open Graph 和 Twitter Cards
-  title = "A tech blog by, Shiva Inampudi"
+  title = "www.shiva.dev"
   # website description for RSS, SEO, Open Graph and Twitter Cards
   # 网站描述, 用于 RSS, SEO, Open Graph 和 Twitter Cards
-  description = "shiva.dev: a tech blog by, Shiva Inampudi."
+  description = "Shiva Inampudi's Tech Blog."
   # website images for Open Graph and Twitter Cards
   # 网站图片, 用于 Open Graph 和 Twitter Cards
   images = []
@@ -76,7 +76,7 @@
       # title name
       # 标题名称
       # shiva.dev
-      name = "> SHIVA"
+      name = "SHIVA.DEV"
       # you can add extra information before the name (HTML format is supported), such as icons
       # 你可以在名称 (允许 HTML 格式) 之前添加其他信息, 例如图标
       pre = ""
@@ -144,7 +144,7 @@
   [params.app]
     # optional site title override for the app when added to an iOS home screen or Android launcher
     # 当添加到 iOS 主屏幕或者 Android 启动器时的标题, 覆盖默认标题
-    title = "A tech blog by, Shiva Inampudi"
+    title = Shiva Inampudi's Tech Blog"
     # whether to omit favicon resource links
     # 是否隐藏网站图标资源链接
     noFavicon = false
@@ -289,7 +289,7 @@
     Researchgate = ""
     Mastodon = ""
     Thingiverse = ""
-    Devto = ""
+    Devto = "shiva_"
     Gitea = ""
     XMPP = ""
     Matrix = ""
