--- a/themes/LoveIt/config.toml
+++ b/themes/LoveIt/config.toml
@@ -53,7 +53,7 @@
   title = "www.shiva.dev"
   # website description for RSS, SEO, Open Graph and Twitter Cards
   # 网站描述, 用于 RSS, SEO, Open Graph 和 Twitter Cards
-  description = "Shiva Inampudi's Tech Blog"
+  description = "Shiva's Tech Blog"
   # website images for Open Graph and Twitter Cards
   # 网站图片, 用于 Open Graph 和 Twitter Cards
   images = []
@@ -144,7 +144,7 @@
   [params.app]
     # optional site title override for the app when added to an iOS home screen or Android launcher
     # 当添加到 iOS 主屏幕或者 Android 启动器时的标题, 覆盖默认标题
-    title = "Shiva Inampudi's Tech Blog"
+    title = "Shiva's Tech Blog"
     # whether to omit favicon resource links
     # 是否隐藏网站图标资源链接
     noFavicon = false
