--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
-[submodule "static/cv"]
+[submodule "public/cv"]
 	path = public/cv
 	url = https://github.com/lazydeveloper/resume.git
 	branch = pub
