added static module resume

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,5 +1,5 @@
 [submodule "static/cv"]
-	path = static/cv
-	url = https://github.com/lazydeveloper/resume.git
+	path = static/cv/
+	url = git@github.com:lazydeveloper/resume.git
 	branch = main
 
