--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
-[submodule "public/cv"]
-	path = public/cv/
+[submodule "static/cv"]
+	path = static/cv/
 	url = git@github.com:lazydeveloper/resume.git
 	branch = main
