--- a/themes/LoveIt/config.toml
+++ b/themes/LoveIt/config.toml
@@ -231,7 +231,7 @@
   # Social config in home page
   # 主页的社交信息设置
   [params.social]
-    GitHub = "lazydeveloper"
+    GitHub = "shlva"
     Linkedin = ""
     Twitter = "/"
     Instagram = ""
