--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,7 @@
 	path = static/cv
 	url = https://github.com/SHlVA/shlva.github.io.git
 	branch = main
+[submodule "public/cv"]
+	path = public/cv
+	url = https://github.com/SHlVA/resume.git
+	branch = main
