--- a/themes/LoveIt/config.toml
+++ b/themes/LoveIt/config.toml
@@ -53,7 +53,7 @@
   title = "www.shiva.dev"
   # website description for RSS, SEO, Open Graph and Twitter Cards
   # 网站描述, 用于 RSS, SEO, Open Graph 和 Twitter Cards
-  description = "Shiva's Tech Blog"
+  description = "Tech Odyssey of Shiva Inampudi"
   # website images for Open Graph and Twitter Cards
   # 网站图片, 用于 Open Graph 和 Twitter Cards
   images = []
@@ -211,7 +211,7 @@
       title = ""
       # subtitle shown in home page (HTML format is supported)
       # 主页显示的网站副标题 (允许 HTML 格式)
-      subtitle = "<code> git push origin www.shiva.dev</code>"
+      subtitle = "Tech Odyssey of Shiva Inampudi"
       # whether to use typeit animation for subtitle
       # 是否为副标题显示打字机动画
       typeit = true
