--- a/themes/LoveIt/config.toml
+++ b/themes/LoveIt/config.toml
@@ -233,7 +233,7 @@
   [params.social]
     GitHub = "shlva"
     Linkedin = ""
-    Twitter = "/"
+    Twitter = "okkaduX"
     Instagram = ""
     Facebook = ""
     Telegram = ""
