--- a/themes/LoveIt/config.toml
+++ b/themes/LoveIt/config.toml
@@ -180,7 +180,7 @@
     contentLength = 4000
     # placeholder of the search bar
     # 搜索框的占位提示语
-    placeholder = "Search shiva.dev"
+    placeholder = "Search www.shiva.dev"
     # max number of results length
     # 最大结果数目
     maxResultLength = 10
@@ -652,3 +652,4 @@
     # whether to use object-fit-images to be compatible with older browsers
     # 是否使用 object-fit-images 来兼容旧式浏览器
     objectFit = false
+
