added email social

--- a/themes/LoveIt/assets/data/social.yml
+++ b/themes/LoveIt/assets/data/social.yml
@@ -499,7 +499,7 @@ email:
   Template: mailto:%v
   Title: Email
   Icon:
-    Class: fa-solid fa-envelope fa-fw
+    Class: fa-regular fa-envelope fa-fw
 
 # 064: RSS
 rss:
