--- a/config.toml
+++ b/config.toml
@@ -7,7 +7,7 @@ theme = "LoveIt"
 # themesDir = "../.."
 
 # website title
-title = "SHIVA.DEV"
+title = "Shiva.Dev"
 
 # determines default content language ["en", "zh-cn", "fr", "pl", ...]
 # 设置默认的语言 ["en", "zh-cn", "fr", "pl", ...]
@@ -45,7 +45,7 @@ ignoreErrors = ["error-remote-getjson", "error-missing-instagram-accesstoken"]
 
 # Author config
 [author]
-  name = "Shiva Inampudi"
+  name = "Shiva"
   email = ""
   link = "https://shiva.dev"
 
