--- a/themes/LoveIt/config.toml
+++ b/themes/LoveIt/config.toml
@@ -61,7 +61,7 @@
   title = "www.shiva.dev"
   # website description for RSS, SEO, Open Graph and Twitter Cards
   # 网站描述, 用于 RSS, SEO, Open Graph 和 Twitter Cards
-  description = "This is Shiva Inampudi, I build things for the web on the cloud"
+  description = "This is Shiva, I build things for the web!"
   # website images for Open Graph and Twitter Cards
   # 网站图片, 用于 Open Graph 和 Twitter Cards
   images = []
