minor updates to the site name

--- a/themes/LoveIt/config.toml
+++ b/themes/LoveIt/config.toml
@@ -292,7 +292,7 @@
     Researchgate = ""
     Mastodon = ""
     Thingiverse = ""
-    Devto = "shiva_"
+    Devto = "lazydeveloper"
     Gitea = ""
     XMPP = ""
     Matrix = ""
