--- a/config.toml
+++ b/config.toml
@@ -7,7 +7,7 @@ theme = "LoveIt"
 # themesDir = "../.."
 
 # website title
-title = "SHIVA.DEV"
+title = "shiva.dev"
 
 # determines default content language ["en", "zh-cn", "fr", "pl", ...]
 # 设置默认的语言 ["en", "zh-cn", "fr", "pl", ...]
@@ -46,7 +46,7 @@ ignoreErrors = ["error-remote-getjson", "error-missing-instagram-accesstoken"]
 # Author config
 [author]
   name = "Shiva"
-  email = ""
+  email = "me@shiva.dev"
   link = "https://shiva.dev"
 
 [markup]
