--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -52,6 +52,7 @@ jobs:
           # For maximum backward compatibility with Hugo modules
           HUGO_ENVIRONMENT: production
           HUGO_ENV: production
+          PASSWORD: ${{ secrets.POST_PASSWORD_00 }}
         run: |
           hugo \
             --minify \
