updated telegram social

--- a/themes/LoveIt/config.toml
+++ b/themes/LoveIt/config.toml
@@ -237,10 +237,10 @@
     Email = "me@shiva.dev"
     GitHub = "lazydeveloper"
     Linkedin = ""
-    Twitter = "SHlVA_DEV"
+    Twitter = "shivadev"
     Instagram = ""
     Facebook = ""
-    Telegram = ""
+    Telegram = "shiva_dev"
     Medium = ""
     Gitlab = "okkadu"
     Youtubelegacy = ""
