updated telegram and twitter socials

--- a/themes/LoveIt/config.toml
+++ b/themes/LoveIt/config.toml
@@ -237,7 +237,7 @@
     Email = "me@shiva.dev"
     GitHub = "lazydeveloper"
     Linkedin = ""
-    Twitter = "shivadev"
+    Twitter = "shiva__dev"
     Instagram = ""
     Facebook = ""
     Telegram = "shiva_dev"
