updated twitter to x in social.yml

--- a/themes/LoveIt/assets/data/social.yml
+++ b/themes/LoveIt/assets/data/social.yml
@@ -20,7 +20,7 @@ twitter:
   Prefix: https://x.com/
   Title: Twitter
   Icon:
-    Class: fa-brands fa-twitter fa-fw
+    Class: fa-brands fa-x-twitter fa-fw
 
 # 004: Instagram
 instagram:
