updated site description on globel

--- a/themes/LoveIt/assets/data/social.yml
+++ b/themes/LoveIt/assets/data/social.yml
@@ -20,7 +20,7 @@ twitter:
   Prefix: https://x.com/
   Title: Twitter
   Icon:
-    Class: fab fa-x-twitter fa-fw
+    Class: fa-brands fa-twitter fa-fw
 
 # 004: Instagram
 instagram:
@@ -41,7 +41,7 @@ facebook:
 # 006: Telegram
 telegram:
   Weight: 6
-  Prefix: https://t.me/
+  Prefix: https://t.me/shiva_dev
   Title: Telegram
   Icon:
     Class: fab fa-telegram-plane fa-fw
