--- a/themes/LoveIt/config.toml
+++ b/themes/LoveIt/config.toml
@@ -40,6 +40,12 @@
     name = ""
     url = "https://github.com/lazydeveloper"
     title = "Visit my github profile"
+# Global website metadata
+
+# SHIVA-----------
+# This description is used for SEO, RSS, Open Graph, and Twitter Cards if no specific params.description is provided
+description = "A tech blog by Shiva Inampudi"
+
 [params]
   # site default theme ["auto", "light", "dark"]
   # 网站默认主题 ["auto", "light", "dark"]
