--- a/themes/LoveIt/config.toml
+++ b/themes/LoveIt/config.toml
@@ -118,6 +118,9 @@ description = "A tech blog by Shiva Inampudi"
     # site creation time
     # 网站创立年份
     since = 2019
+
+    # site latest year
+    year = 2025
     # ICP info only in China (HTML format is supported)
     # ICP 备案信息，仅在中国使用 (支持 HTML 格式)
     icp = ""
