Updated to latest version of Hugo and fixed depricated

--- a/config.toml
+++ b/config.toml
@@ -24,7 +24,7 @@ hasCJKLanguage = false
 
 # default amount of posts in each pages
 # 默认每页列表显示的文章数目
-paginate = 12
+pagination.pagerSize = 12
 # google analytics code [UA-XXXXXXXX-X]
 # 谷歌分析代号 [UA-XXXXXXXX-X]
 googleAnalytics = ""
@@ -42,6 +42,9 @@ gitRepo = "https://github.com/lazydeveloper/lazydeveloper.github.io"
 
 # ignore some build errors
 ignoreErrors = ["error-remote-getjson", "error-missing-instagram-accesstoken"]
+
+# suppress specific warnings
+ignoreLogs = ['warning-goldmark-raw-html']
 
 # Author config
 [author]
@@ -68,4 +71,4 @@ ignoreErrors = ["error-remote-getjson", "error-missing-instagram-accesstoken"]
 
 
 
- 
+
