--- a/themes/LoveIt/config.toml
+++ b/themes/LoveIt/config.toml
@@ -118,11 +118,6 @@ description = "A tech blog by Shiva Inampudi"
     # site creation time
     # 网站创立年份
     since = 2019
-<<<<<<< HEAD
-
-    # site latest year
-=======
->>>>>>> 4237a869231b4fbd32a7344e027721f74f33292a
     year = 2025
     # ICP info only in China (HTML format is supported)
     # ICP 备案信息，仅在中国使用 (支持 HTML 格式)
@@ -136,7 +131,7 @@ description = "A tech blog by Shiva Inampudi"
   [params.section]
     # special amount of posts in each section page
     # section 页面每页显示文章数量
-    paginate = 20
+    pagination.pagerSize = 20
     # date format (month and day)
     # 日期格式 (月和日)
     dateFormat = "01-02"
@@ -149,7 +144,7 @@ description = "A tech blog by Shiva Inampudi"
   [params.list]
     # special amount of posts in each list page
     # list 页面每页显示文章数量
-    paginate = 20
+    pagination.pagerSize = 20
     # date format (month and day)
     # 日期格式 (月和日)
     dateFormat = "01-02"
@@ -242,7 +237,7 @@ description = "A tech blog by Shiva Inampudi"
       enable = true
       # special amount of posts in each home posts page
       # 主页每页显示文章数量
-      paginate = 6
+      pagination.pagerSize = 6
   # Social config in home page
   # 主页的社交信息设置
   [params.social]
