--- a/themes/LoveIt/exampleSite/config.toml
+++ b/themes/LoveIt/exampleSite/config.toml
@@ -26,7 +26,7 @@ hasCJKLanguage = false
 
 # default amount of posts in each pages
 # 默认每页列表显示的文章数目
-paginate = 12
+pagination.pagerSize = 12
 # google analytics code [UA-XXXXXXXX-X]
 # 谷歌分析代号 [UA-XXXXXXXX-X]
 googleAnalytics = ""
@@ -169,7 +169,7 @@ enableEmoji = true
   [params.section]
     # special amount of posts in each section page
     # section 页面每页显示文章数量
-    paginate = 20
+    pagination.pagerSize = 20
     # date format (month and day)
     # 日期格式 (月和日)
     dateFormat = "01-02"
@@ -182,7 +182,7 @@ enableEmoji = true
   [params.list]
     # special amount of posts in each list page
     # list 页面每页显示文章数量
-    paginate = 20
+    pagination.pagerSize = 20
     # date format (month and day)
     # 日期格式 (月和日)
     dateFormat = "01-02"
@@ -279,7 +279,7 @@ enableEmoji = true
       enable = true
       # special amount of posts in each home posts page
       # 主页每页显示文章数量
-      paginate = 6
+      pagination.pagerSize = 6
   # Social config in home page
   # 主页的社交信息设置
   [params.social]
