--- a/config.toml
+++ b/config.toml
@@ -53,23 +53,7 @@ ignoreLogs = ['warning-goldmark-raw-html']
   link = "https://shiva.dev"
 
 [params]
-
-[markup]
-  # Syntax Highlighting (https://gohugo.io/content-management/syntax-highlighting)
-  [markup.highlight]
-    codeFences = true
-    guessSyntax = true
-    lineNos = true
-    lineNumbersInTable = true
-    # false is a necessary configuration (https://github.com/dillonzq/LoveIt/issues/158)
-    # false 是必要的设置 (https://github.com/dillonzq/LoveIt/issues/158)
-    noClasses = false
-
-
-  # Enable JSON output 
-  [outputs]
-    home = ["HTML", "RSS", "JSON"]
-    page = ["HTML"]
+  [params.home]
 
 
 
